| Bug #1427 | enum allows duplicate values in the list | ||
|---|---|---|---|
| Submitted: | 29 Sep 2003 1:45 | Modified: | 13 Mar 2004 7:32 |
| Reporter: | Sergei Golubchik | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | |
| Assigned to: | Bugs System | Target Version: | |
[29 Sep 2003 1:46]
Sergei Golubchik
oops. typo. of course "... it should NOT result in an error"
[16 Oct 2003 8:00]
Victor Vagin
bk commit - 4.1 tree (1.1609)
[11 Mar 2004 2:16]
Victor Vagin
ChangeSet 1.1609 03/10/16 17:25:44 vva@eagle.mysql.r18.ru +27 -0 added test for duplicated values in enum and set (bug #1427)
[13 Mar 2004 7:32]
Victor Vagin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
The fix will be in mysql-4.1.2

Description: duplicate values in the enum list are allowed How to repeat: create table a (i enum('a','a')); Suggested fix: as this can be sometimes a useful feature, it should result in an error, but definitely MySQL 4.1 should issue a warning for CREATE/ALTER TABLE that creates such an enum