fixed bug #1427 "enum allows duplicate values in the list"